--- a/css/base.css
+++ b/css/base.css
@@ -1,31 +1,3 @@
-@keyframes bounce {
-  from,
-  20%,
-  53%,
-  80%,
-  to {
-    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-    transform: translate3d(0, 0, 0);
-  }
-
-  40%,
-  43% {
-    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-    transform: translate3d(0, -30px, 0);
-  }
-
-  70% {
-    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-    transform: translate3d(0, -15px, 0);
-  }
-
-  90% {
-    transform: translate3d(0, -4px, 0);
-  }
-}
-
-
-
 :focus {outline:none;}
 ::-moz-focus-inner {border:0;}
 
@@ -94,14 +66,6 @@ a {
   -ms-user-select: none;
 }
 
-.icon__wrap--start svg {
-  position: absolute;
-  bottom: 5rem;
-  left: 50%;
-  animation-name: bounce;
-  transform-origin: center bottom;
-}
-
 img {
   max-width: 100%;
   display: block;
@@ -116,18 +80,10 @@ ul > li + li {
   z-index: 10;
   position: relative;
   background-color: var(--bg);
-  padding: 5rem 20rem;
-  min-height: 100vh;
-  display: flex;
-  flex-wrap: wrap;
+  padding: 3rem 5rem;
 }
 
 .sections {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-gap: 10rem;
-  max-width: 1200px;
-  margin: 0 auto;
   width: 100%;
 }
 
@@ -209,4 +165,22 @@ footer {
 footer svg {
   width: 30px;
   fill: rgba(255, 255, 255, .5);
+}
+
+@media screen and (min-width: 768px) {
+  .sections {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-gap: 10rem;
+    max-width: 1200px;
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  .main {
+    padding: 5rem 20rem;
+    min-height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
